--- a/auto_paper/02_psd.html
+++ b/auto_paper/02_psd.html
@@ -14,8 +14,8 @@
     <script src="../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Preprocessing routine" href="preprocessing_info.html" />
-    <link rel="prev" title="Part 5: Plot results" href="04_plots.html" />
+    <link rel="next" title="Part 4: Compute transition frequency" href="03_compute_transfreq.html" />
+    <link rel="prev" title="Part 2: Preprocessing" href="01_preprocessing.html" />
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
