--- a/auto_paper/preprocessing_info.html
+++ b/auto_paper/preprocessing_info.html
@@ -14,7 +14,7 @@
     <script src="../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="prev" title="Part 3: Compute power spectra" href="02_psd.html" />
+    <link rel="prev" title="Part 5: Plot results" href="04_plots.html" />
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
