--- a/auto_examples/plot_main_code.html
+++ b/auto_examples/plot_main_code.html
@@ -14,8 +14,8 @@
     <script src="../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Reproducing paper results" href="../auto_paper/index.html" />
-    <link rel="prev" title="Compute transition frequency from custom clusters" href="plot_manual_analysis.html" />
+    <link rel="next" title="Compute transition frequency from custom clusters" href="plot_manual_analysis.html" />
+    <link rel="prev" title="General examples" href="index.html" />
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
@@ -216,7 +216,7 @@ and with transfreq</p>
 </pre></div>
 </div>
 <img alt="../_images/sphx_glr_plot_main_code_002.png" class="sphx-glr-single-img" src="../_images/sphx_glr_plot_main_code_002.png" />
-<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> ( 0 minutes  56.582 seconds)</p>
+<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> ( 0 minutes  18.819 seconds)</p>
 <div class="sphx-glr-footer class sphx-glr-footer-example docutils container" id="sphx-glr-download-auto-examples-plot-main-code-py">
 <div class="sphx-glr-download docutils container">
 <p><a class="reference download internal" download="" href="../_downloads/6ebea8b99d070da1c67ef35918790c57/plot_main_code.py"><code class="xref download docutils literal notranslate"><span class="pre">Download</span> <span class="pre">Python</span> <span class="pre">source</span> <span class="pre">code:</span> <span class="pre">plot_main_code.py</span></code></a></p>
