--- a/auto_examples/plot_manual_analysis.html
+++ b/auto_examples/plot_manual_analysis.html
@@ -14,8 +14,8 @@
     <script src="../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Authomatic computation of the transition frequency" href="plot_main_code.html" />
-    <link rel="prev" title="General examples" href="index.html" />
+    <link rel="next" title="Reproducing paper results" href="../auto_paper/index.html" />
+    <link rel="prev" title="Authomatic computation of the transition frequency" href="plot_main_code.html" />
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
@@ -225,7 +225,7 @@ the corresponding transition frequency</p>
 </pre></div>
 </div>
 <img alt="../_images/sphx_glr_plot_manual_analysis_004.png" class="sphx-glr-single-img" src="../_images/sphx_glr_plot_manual_analysis_004.png" />
-<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> ( 0 minutes  44.380 seconds)</p>
+<p class="sphx-glr-timing"><strong>Total running time of the script:</strong> ( 0 minutes  16.301 seconds)</p>
 <div class="sphx-glr-footer class sphx-glr-footer-example docutils container" id="sphx-glr-download-auto-examples-plot-manual-analysis-py">
 <div class="sphx-glr-download docutils container">
 <p><a class="reference download internal" download="" href="../_downloads/6e18665ea313d9cdbe6a0209f4b41dcb/plot_manual_analysis.py"><code class="xref download docutils literal notranslate"><span class="pre">Download</span> <span class="pre">Python</span> <span class="pre">source</span> <span class="pre">code:</span> <span class="pre">plot_manual_analysis.py</span></code></a></p>
