--- a/auto_paper/01_preprocessing.html
+++ b/auto_paper/01_preprocessing.html
@@ -14,7 +14,7 @@
     <script src="../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Part 4: Compute transition frequency" href="03_compute_transfreq.html" />
+    <link rel="next" title="Part 3: Compute power spectra" href="02_psd.html" />
     <link rel="prev" title="Part 1: Fetch data" href="00_fetch_data.html" />
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
