--- a/auto_paper/03_compute_transfreq.html
+++ b/auto_paper/03_compute_transfreq.html
@@ -15,7 +15,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Part 5: Plot results" href="04_plots.html" />
-    <link rel="prev" title="Part 2: Preprocessing" href="01_preprocessing.html" />
+    <link rel="prev" title="Part 3: Compute power spectra" href="02_psd.html" />
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
