--- a/genindex.html
+++ b/genindex.html
@@ -103,11 +103,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/transfreq.functions.compute_transfreq.html#transfreq.functions.compute_transfreq">compute_transfreq() (in module transfreq.functions)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/transfreq.functions.compute_transfreq_klimesch.html#transfreq.functions.compute_transfreq_klimesch">compute_transfreq_klimesch() (in module transfreq.functions)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/transfreq.functions.compute_transfreq_manual.html#transfreq.functions.compute_transfreq_manual">compute_transfreq_manual() (in module transfreq.functions)</a>
+</li>
+      <li><a href="generated/transfreq.functions.compute_transfreq_minimum.html#transfreq.functions.compute_transfreq_minimum">compute_transfreq_minimum() (in module transfreq.functions)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -128,6 +130,8 @@
       <li><a href="generated/transfreq.viz.plot_transfreq.html#transfreq.viz.plot_transfreq">plot_transfreq() (in module transfreq.viz)</a>
 </li>
       <li><a href="generated/transfreq.viz.plot_transfreq_klimesch.html#transfreq.viz.plot_transfreq_klimesch">plot_transfreq_klimesch() (in module transfreq.viz)</a>
+</li>
+      <li><a href="generated/transfreq.viz.plot_transfreq_minimum.html#transfreq.viz.plot_transfreq_minimum">plot_transfreq_minimum() (in module transfreq.viz)</a>
 </li>
   </ul></td>
 </tr></table>
