--- a/auto_examples/index.html
+++ b/auto_examples/index.html
@@ -20,7 +20,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Authomatic computation of the transition frequency" href="plot_main_code.html" />
-    <link rel="prev" title="transfreq.viz.plot_transfreq_klimesch" href="../generated/transfreq.viz.plot_transfreq_klimesch.html" />
+    <link rel="prev" title="transfreq.viz.plot_transfreq_minimum" href="../generated/transfreq.viz.plot_transfreq_minimum.html" />
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
